--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -14,5 +14,5 @@ tracing-subscriber.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 cpal = "0.15"
-transcription = { path = "./transcription" }
 whisper-rs = "0.11"
+mouse-keyboard-input = "0.4"
