Added config support

--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -13,6 +13,8 @@ tracing.workspace = true
 tracing-subscriber.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+serde_derive = "1.0"
+toml = "0.8"
 cpal = "0.15"
 whisper-rs = "0.13"
 enigo = { version = "0.3.0", default-features = false, features = ["wayland"] }
