--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -15,6 +15,7 @@ serde.workspace = true
 serde_json.workspace = true
 serde_derive = "1.0"
 toml = "0.8"
+regex = "1.10"
 cpal = "0.15"
 whisper-rs = "0.13"
 enigo = { version = "0.3.0", default-features = false, features = ["wayland"] }
