--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -18,7 +18,7 @@ toml = "0.8"
 regex = "1.10"
 cpal = "0.15"
 whisper-rs = "0.13"
-enigo = { version = "0.3.0", default-features = false, features = ["wayland"] }
+wrtype = "0.1"
 dirs = "5.0"
 reqwest = { version = "0.11", features = ["stream", "rustls-tls"], default-features = false }
 futures-util = "0.3"
