--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,8 @@ resolver = "2"
 
 [workspace.package]
 version = "0.1.0"
-edition = "2021"
-authors = ["Your Name <you@example.com>"]
+edition = "2025"
+authors = ["Uneeb Kamal <uneebkamal125@gmail.com>"]
 
 [workspace.dependencies]
 tokio = { version = "1.40", features = ["full"] }
