--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -17,7 +17,7 @@ serde_derive = "1.0"
 toml = "0.8"
 regex = "1.10"
 cpal = "0.15"
-whisper-rs = "0.13"
+whisper-rs = { version = "0.15.1", features = ["hipblas"] }
 wrtype = "0.1"
 dirs = "5.0"
 reqwest = { version = "0.11", features = ["stream", "rustls-tls"], default-features = false }
