--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -11,3 +11,6 @@ clap.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 tokio.workspace = true
+
+[dev-dependencies]
+tokio-test = "0.4"
