--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -4,6 +4,12 @@ version.workspace = true
 edition.workspace = true
 authors.workspace = true
 
+[lib]
+
+[[bin]]
+name = "ndictd"
+path = "src/main.rs"
+
 [dependencies]
 shared = { path = "../shared" }
 anyhow.workspace = true
@@ -22,3 +28,8 @@ wrtype = "0.1"
 dirs = "5.0"
 reqwest = { version = "0.11", features = ["stream", "rustls-tls"], default-features = false }
 futures-util = "0.3"
+
+[dev-dependencies]
+tokio-test = "0.4"
+tempfile = "3.10"
+serial_test = "3.1"
