--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -8,3 +8,6 @@ authors.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 thiserror.workspace = true
+
+[dev-dependencies]
+serde_test = "1.0"
