Added graceful failing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,8 @@ thiserror = "1.0"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 clap = { version = "4.5", features = ["derive"] }
+
+[env]
+HIP_ARCH="gfx1100"
+AMDGPU_TARGETS="gfx1100"
+CXXFLAGS="-D_GLIBCXX_ASSERTIONS=0" 
