--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -28,6 +28,9 @@ wrtype = "0.1"
 dirs = "5.0"
 reqwest = { version = "0.11", features = ["stream", "rustls-tls"], default-features = false }
 futures-util = "0.3"
+sha2 = "0.10"
+hex = "0.4"
+governor = "0.6"
 
 [dev-dependencies]
 tokio-test = "0.4"
