--- a/systemd/ndictd.service
+++ b/systemd/ndictd.service
@@ -6,7 +6,7 @@ After=graphical-session.target
 Type=simple
 ExecStartPre=/bin/sh -c 'mkdir -p ~/.local/share/ndict'
 ExecStart=/bin/sh -c '/home/uneeb/.local/bin/ndictd'
-ExecStop=/bin/sh -c 'pkill -f ndictd; rm -f /tmp/ndictd.sock'
+ExecStop=/bin/sh -c 'pkill -f ndictd; rm -f $XDG_RUNTIME_DIR/ndictd.sock 2>/dev/null || rm -f /tmp/ndictd.sock'
 Restart=on-failure
 RestartSec=5
 AmbientCapabilities=CAP_SYS_INPUT
