--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -11,6 +11,8 @@ clap.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 tokio.workspace = true
+tracing.workspace = true
+dirs = "5.0"
 
 [dev-dependencies]
 tokio-test = "0.4"
